@@ -8,7 +8,9 @@ The following bugs have been fixed or resolved on this branch.
 202770  open fd at exit --log-socket=127.0.0.1:1500 with --track-fds=yes
 311655  --log-file=FILE leads to apparent fd leak
 337388  fcntl works on Valgrind's own file descriptors
+391148  Unhandled AVX instruction vmovq %xmm9,%xmm1
 444781  MIPS: wrong syscall numbers used
+417572  vex amd64->IR: unhandled instruction bytes: 0xC5 0x79 0xD6 0xED 0xC5
 453044  gbserver_tests failures in aarch64
 479661  Valgrind leaks file descriptors
 486180  [MIPS] 'VexGuestArchState' has no member named 'guest_IP_AT_SYSCALL'
@@ -16,6 +18,7 @@ The following bugs have been fixed or resolved on this branch.
 486569  linux inotify_init syscall wrapper missing POST entry in syscall_table
 487439  SIGILL in JDK11, JDK17
 488379  --track-fds=yes errors that cannot be suppressed with --xml-file=
+489088  Valgrind throws unhandled instruction bytes: 0xC5 0x79 0xD6 0xE0 0xC5
 n-i-bz  aarch64 frinta and frinta vector instructions
 
 To see details of a given bug, visit
